# watcher

./: .gitattributes  .gitignore  .taplo.toml  Cargo.toml  LICENSE  README.md  browser.js  eslint.config.ts  index.d.ts  index.js  package-lock.json  package.json  prettier.config.js  rustfmt.toml  tsconfig.json  watcher.wasi-browser.js  watcher.wasi.cjs
.github/workflows/: CI.yml  build.yml
__test__/: index.spec.ts  tsconfig.json
src/: lib.rs
watcher/: .npmignore  Cargo.toml  index.d.ts  index.js  package.json
watcher/src/: lib.rs
